# fastscrumpoker

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: jira.py  main.py  room.py
static/: script.js  style.css
templates/: index.html
tests/: test_app.py  test_room.py
